Make log messages more user-friendly